<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="order">Order</string>
    <string name="chose_a_delivery_method">Chose a delivery method</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="enter_note">Enter note</string>
    <string name="note">Note</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone">Phone</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>


    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">settings</string>
    <string name="contacts">Contacts</string>
    <string name="status">Status</string>
    <string name="favourites">Favourites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
</resources>
