<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="100"
        android:title="@string/contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_status"
        android:orderInCategory="20"
        android:title="@string/status"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favourites"
        android:icon="@drawable/ic_favourite"
        android:orderInCategory="30"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />
</menu>